# ethanon

./: .gitignore  Guide.docx  README.md  verify_text_formats.bat
toolkit/Source/: CMakeLists.txt  Ethanon Engine.sln  WinMM.Lib  libboost_date_time-vc90-mt-sgd-1_57.lib  rpcrt4.lib
toolkit/Source/projects/msvc9/: CMakeLists.txt  afxres.h  file_version.rc  resource.h  resource.rc
toolkit/Source/projects/msvc9/Ethanon Editor/: Ethanon Editor.vcproj
toolkit/Source/projects/msvc9/Ethanon Engine/: Ethanon Engine.vcproj
toolkit/Source/projects/msvc9/Ethanon Machine/: Ethanon Machine.vcproj
toolkit/Source/projects/vs2019/Ethanon/: Ethanon.sln  UpgradeLog.htm  UpgradeLog2.htm
toolkit/Source/projects/xcode/CreatingACustomMetalView/: README.md
toolkit/Source/projects/xcode/Ethanon/: Ethanon-Info.plist  Ethanon-Prefix.pch  EthanonAppDelegate.h  main.m
toolkit/Source/projects/xcode/Ethanon.xcodeproj/: project.pbxproj
toolkit/Source/projects/xcode/Ethanon.xcworkspace/: contents.xcworkspacedata
toolkit/Source/projects/xcode/OSXEditor/: editor_icon.icns  icon.icns
toolkit/Source/projects/xcode/OSXMachine/: icon.icns
toolkit/Source/projects/xcode/assets/: readme.txt
toolkit/Source/projects/xcode/iOS/: build-how-to.txt
toolkit/Source/projects/xcode/old-iOS/: assets_mr
toolkit/Source/src/: CMakeLists.txt
toolkit/Source/src/addons/: _scriptarray.h  aswrappedcall.h  scriptany.cpp  scriptany.h  scriptarray.cpp  scriptarray.h  scriptbuilder.cpp  scriptbuilder.h  scriptdictionary.cpp  scriptdictionary.h  scriptfile.cpp  scriptfile.h  scriptmath.cpp  scriptmath.h  scriptmath2d.cpp  scriptmath2d.h  scriptmath3d.cpp  scriptmath3d.h  scriptstdstring.cpp
toolkit/Source/src/addons/ansi/: scriptbuilder.cpp  scriptbuilder.h  scriptstdstring.cpp  scriptstdstring.h
toolkit/Source/src/addons/utf16/: scriptbuilder.cpp  scriptbuilder.h  scriptfile.cpp  scriptfile.h  scriptstdstring.cpp  scriptstdstring.h
toolkit/Source/src/angelscript/: CMakeLists.txt
toolkit/Source/src/angelscript/include/: angelscript.h
toolkit/Source/src/angelscript/source/: as_atomic.cpp  as_builder.cpp  as_builder.h  as_bytecode.cpp  as_bytecode.h  as_compiler.cpp  as_compiler.h  as_config.h  as_configgroup.cpp  as_context.cpp  as_datatype.cpp  as_datatype.h  as_gc.cpp  as_gc.h  as_module.cpp  as_module.h  as_objecttype.cpp  as_objecttype.h  as_parser.cpp  as_parser.h  as_restore.cpp  as_scriptengine.cpp  as_scriptengine.h  as_scriptfunction.cpp  as_scriptfunction.h  as_scriptobject.cpp  as_texts.h  as_tokenizer.cpp
toolkit/Source/src/box2d/Box2D/: CMakeLists.txt
toolkit/Source/src/editor/: CMakeLists.txt  CustomDataEditor.cpp  CustomDataEditor.h  EditorBase.cpp  EditorBase.h  EditorBase.linux.cpp  EditorBase.macosx.cpp  EditorBase.macosx.mm  EditorBase.windows.cpp  EditorCommon.h  EntityEditor.cpp  EntityEditor.h  IEditorPlugin.cpp  IEditorPlugin.h  ParticleFXEditor.cpp  ParticleFXEditor.h  ParticleScale.cpp  ParticleScale.h  ProjectManager.cpp  ProjectManager.h  SceneEditor.cpp  SceneEditor.h  gsgui.cpp  gsgui.h  main.cpp
toolkit/Source/src/engine/: CMakeLists.txt  ETHCommon.cpp  ETHCommon.h  ETHDirectories.cpp  ETHDirectories.h  ETHEngine.cpp  ETHEngine.h  ETHParticleManager.cpp  ETHParticleManager.h  ETHPrimitiveDrawer.cpp  ETHPrimitiveDrawer.h  ETHResourceManager.cpp  ETHResourceManager.h  ETHResourceProvider.cpp  ETHResourceProvider.h  ETHTypes.h
toolkit/Source/src/engine/Drawing/: ETHDrawable.cpp  ETHDrawable.h  ETHDrawableManager.cpp  ETHDrawableManager.h  ETHElementDrawer.cpp  ETHElementDrawer.h  ETHParticleDrawer.cpp  ETHParticleDrawer.h
toolkit/Source/src/engine/Entity/: ETHCustomDataManager.cpp  ETHCustomDataManager.h  ETHEntity.cpp  ETHEntity.h  ETHEntityArray.cpp  ETHEntityArray.h  ETHEntityCache.cpp  ETHEntityCache.h  ETHEntityChooser.cpp  ETHEntityChooser.h  ETHEntityController.cpp  ETHEntityController.h  ETHEntityProperties.cpp  ETHEntityProperties.h  ETHLight.cpp  ETHLight.h  ETHRenderEntity.cpp  ETHRenderEntity.h  ETHScriptEntity.cpp  ETHScriptEntity.h  ETHSpriteEntity.cpp  ETHSpriteEntity.h
toolkit/Source/src/engine/Particles/: ETHParticleManager.cpp  ETHParticleManager.h  ETHParticleSystem.cpp  ETHParticleSystem.h
toolkit/Source/src/engine/Physics/: ETHCollisionBox.cpp  ETHCollisionBox.h  ETHCompoundShape.cpp  ETHCompoundShape.h  ETHContactListener.cpp  ETHContactListener.h  ETHDestructionListener.cpp  ETHDestructionListener.h  ETHJoint.cpp  ETHJoint.h  ETHPhysicsController.cpp  ETHPhysicsController.h  ETHPhysicsEntityController.cpp  ETHPhysicsEntityController.h  ETHPhysicsSimulator.cpp  ETHPhysicsSimulator.h  ETHPolygon.cpp  ETHPolygon.h  ETHRayCastCallback.cpp  ETHRayCastCallback.h  ETHRevoluteJoint.cpp  ETHRevoluteJoint.h
toolkit/Source/src/engine/Platform/: ETHAppEnmlFile.cpp  ETHAppEnmlFile.h  ETHPlatform.abstract.cpp  ETHPlatform.h  FileListing.abstract.cpp  FileListing.h
toolkit/Source/src/engine/Renderer/: ETHEntityHaloRenderer.cpp  ETHEntityHaloRenderer.h  ETHEntityParticleRenderer.cpp  ETHEntityParticleRenderer.h  ETHEntityPieceRenderer.cpp  ETHEntityPieceRenderer.h  ETHEntityRenderingManager.cpp  ETHEntityRenderingManager.h  ETHEntitySpriteRenderer.cpp  ETHEntitySpriteRenderer.h
toolkit/Source/src/engine/Resource/: ETHDirectories.cpp  ETHDirectories.h  ETHResourceContainer.cpp  ETHResourceContainer.h  ETHResourceLoader.cpp  ETHResourceLoader.h  ETHResourceManager.cpp  ETHResourceManager.h  ETHResourceProvider.cpp  ETHResourceProvider.h  ETHSpriteDensityManager.cpp  ETHSpriteDensityManager.h
toolkit/Source/src/engine/Scene/: ETHActiveEntityHandler.cpp  ETHActiveEntityHandler.h  ETHBucketManager.cpp  ETHBucketManager.h  ETHEntityKillListener.h  ETHScene.cpp  ETHScene.h  ETHSceneProperties.cpp  (+3 more)
toolkit/Source/src/gs2d/: CMakeLists.txt  gs2d.sln
toolkit/Source/src/gs2dDeviceEmulatorTemplate/: DeviceEmulator.sln  DeviceEmulator.vcproj
toolkit/Source/src/machine/: CMakeLists.txt  main.cpp  main.sdl.cpp
toolkit/Source/src/shaders/: shaders.h
toolkit/Source/src/soil/: Android.mk  CMakeLists.txt  SOIL.c  stb_image_aug.c  stb_image_aug.h
(+1422 files in other folders)
